src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AIT_Contact_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used as a Place holder for Siebel Contact ID within Zebra. MDM plays a role here</description>
        <externalId>true</externalId>
        <label>AIT Contact ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Key__c</fullName>
        <label>Account Key</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account.Account_Type__c)</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Access_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Administrator Role Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_raised_Deactivate_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin raised Deactivate Request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BO_Error__c</fullName>
        <label>BO Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BO_Synch_Status__c</fullName>
        <label>BO Synch Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Restricted_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is only visible to system administrators and will allow the creation of validation rules that will restrict access to specified contact fields.</description>
        <inlineHelpText>When checked, this field indicates Master Contacts within Siebel for which designated Contact Detail Fields cannot be edited.</inlineHelpText>
        <label>Change_Restricted__contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commitment_Level__c</fullName>
        <description>determine commitment level of this contact</description>
        <label>Commitment Level</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Job_Role__c</fullName>
        <label>Contact Job Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer/Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Contributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project/Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVP, SVP, VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dean/Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Deputy Dir.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Key__c</fullName>
        <label>Contact Key</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Ping_ZUID__c</fullName>
        <label>Contact Ping ZUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Source__c</fullName>
        <description>This field contains the values of the source from where the Contacts was migrated</description>
        <label>Contact Source</label>
        <picklist>
            <picklistValues>
                <fullName>EVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conviction_Level_With_OS_Direction__c</fullName>
        <label>Conviction Level With OS Direction</label>
        <picklist>
            <picklistValues>
                <fullName>0-49%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Call_Opt_Out__c</fullName>
        <description>This is created to enable the Eloqua Preference Management integration.</description>
        <label>Call Opt Out</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Email_Opt_Out__c</fullName>
        <description>This is created to enable Eloqua Preference Management integration</description>
        <label>Email Opt Out</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Company__c</fullName>
        <formula>Account.Name</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSE__DS_DataScout_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud MDM: used internally</description>
        <inlineHelpText>Cloud MDM: used internally</inlineHelpText>
        <label>Cloud MDM Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Legal_Form__c</fullName>
        <formula>Account.DSE__DS_Legal_Form__c</formula>
        <label>Legal Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud MDM: synchronize Contact data with Bean</description>
        <inlineHelpText>Cloud MDM: synchronize Contact data with Bean</inlineHelpText>
        <label>Synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__Domain__c</fullName>
        <description>Demo Edition only</description>
        <inlineHelpText>Demo Edition only</inlineHelpText>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Registration_T_C_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created as part of SSO project to check if the Partner User has accepted the Terms and Conditions of Deal Registration.</description>
        <label>DR Program Guidelines Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <description>This Field is mapped in the Lead Conversion to Contact Fields</description>
        <label>Mail Opt Out</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EVM_Contact_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used as a Place holder for MSI SFDC Contact ID within Zebra. MDM plays a role here</description>
        <externalId>true</externalId>
        <label>EVM Contact ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handheld_Component_For_Opportunity__c</fullName>
        <label>Handheld Component For Opportunity?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Secondary_Roles__c</fullName>
        <formula>NOT(ISBLANK(Secondary_Role__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Secondary Roles?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>This Field is mapped for the lead conversion to Contacts</description>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>Fleet Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics/Supply Chain Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing/Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laboratory/Phlebotomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Enforcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production/Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality/Safety/Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research and Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset/Facilities Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bio-Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration/Staffing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer and Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Advertising/PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training &amp; Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is integrated from MSI. This flag is used to filter the Partner Contacts for MSI Assigned Partners</description>
        <label>Lead Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ORG_Contact_ID__c</fullName>
        <label>ORG Contact ID</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_SourceSystemId__c</fullName>
        <label>Orig SourceSystemId</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Admin_Role_Accepted_Date__c</fullName>
        <label>Partner Admin Role Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Admin_Sequence_Number__c</fullName>
        <label>Partner Admin Sequence Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Administartor_Role_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Administartor Role Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Administrator_Formula__c</fullName>
        <formula>Partner_Administrator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Address_Id__c</fullName>
        <label>Personal Address Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <description>This Field is mapped in the lead Converted to Contacts</description>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Handheld_Operating_System__c</fullName>
        <label>Preferred Handheld Operating System?</label>
        <picklist>
            <picklistValues>
                <fullName>Legacy MSFT (Windows Mobile or CE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window 8/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>Afrikaans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarusian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Traditional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icelandic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latvian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithuanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macedonian</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Company__c</fullName>
        <label>Previous Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Type__c</fullName>
        <label>Primary Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-op/MDF Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegated Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disti Ptnr Cert Status Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Dir/CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAP Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology (IT) Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Co-op Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Marketing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key MDF Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Motorola EMb Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Motorola EMb Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Motorola Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Pricing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Purchasing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Sales Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Sales Out Rpt Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Service Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Symbol Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Personal_Address_Row_Id__c</fullName>
        <label>Primary Personal Address Row Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Role__c</fullName>
        <label>Primary Role</label>
        <picklist>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this contact is the principal or buying decison maker of this account</description>
        <inlineHelpText>Check this box if this contact is the principal or buying decision maker of this account</inlineHelpText>
        <label>Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <picklist>
            <picklistValues>
                <fullName>Aberdeen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aberdeenshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agrigento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguadilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguascalientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahuachapán</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aichi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aisén</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aisén del General Carlos Ibáñez del Campo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alagoas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alajuela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alderney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alessandria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alta Verapaz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alto Paraguay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alto Paraná</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amambay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amapá</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazonas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andaman &amp; Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDCSiebel_Sync_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDCSiebel Sync Status</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>